--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/usuarios.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/usuarios.html
@@ -144,8 +144,8 @@
                     <div class="form-group">
                         <label for="tipo_usuario">tipo_usuario:</label>
                         <select id="tipo_usuario" name="tipo_usuario">
-                            <option value="cc">Administrador</option>
-                            <option value="ce">Vendedor</option>
+                            <option value="Administrador">Administrador</option>
+                            <option value="Vendedor">Vendedor</option>
                         </select>
                      </div>
                  </div>
