Numero factura ok

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -110,11 +110,11 @@
                 <div class="caja1">
                     <div class="form-group">
                         <label for="id_venta">Id_venta</label>
-                        <input type="text" id="id_venta" name="id_venta">
+                        <input type="text" id="id_venta" name="id_venta" value="{{ next_id }}" readonly>
                     </div>
                     <div class="form-group">
                         <label for="id_factura">Id_Factura</label>
-                        <input type="text" id="id_factura" name="id_factura">
+                        <input type="text" id="id_factura" name="id_factura" value="{{ new_code }}" readonly>
                     </div>
                     <div class="form-group">
                         <label for="codigo">Código:</label>
