--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
@@ -96,7 +96,7 @@
                 <div class="caja1">
                     <div class="form-group">
                         <label for="id_cliente">ID Cliente:</label>
-                        <input type="text" id="id_cliente" name="id_cliente">
+                        <input type="text" id="id_cliente" name="id_cliente" value="{{ next_id }}" readonly>
                     </div>
                     <div class="form-group">
                         <label for="tipo_identificacion">Tipo Identificacion:</label>
