numero factura ok v2

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -51,7 +51,7 @@
             <h3>Registro de Caja</h3>     
                 <div class="horizontal-bar my-4 d-flex py-2 justify-content-end " >
                     <img src="/static/images/agregar.png" alt="agregar" class="icon" onclick="openModal()">
-                    <button type="button" class="lector">Lectura codigo de barras</button>
+                    <!-- <button type="button" class="lector">Lectura codigo de barras</button> -->
                     <input type="text" id="search-input" placeholder="Buscar...">
                 </div>
                 
