--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/proveedores.html
@@ -103,8 +103,8 @@
                             <div class="form-group">
                                 <label for="tipo_identificacion">Tipo de Identificacion:</label>
                                 <select type="text" id="tipo_identificacion" name="tipo_identificacion">
-                                    <option value="cc">CC</option>
-                                    <option value="nit">NIT</option>
+                                    <option value="CC">CC</option>
+                                    <option value="NIT">NIT</option>
                                 </select>
                             </div>
                             <div class="form-group">
