--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/static/css/principal.css
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/static/css/principal.css
@@ -7,7 +7,6 @@ body {
 .sidebar-header .logo img {
     width: 120%; /* Ajusta el tamaño del logo según sea necesario */
     height: auto;
-    padding: center;
     margin-right: 50px;
     margin-top: -20px;
 }
@@ -15,7 +14,7 @@ body {
     display: flex;
     align-items: center; /* Centra verticalmente */
     justify-content: center; /* Centra horizontalmente */
-    padding-bottom:-100%; /* Ajusta el espacio inferior según sea necesario */
+    padding-bottom: 20px; /* Ajusta el espacio inferior según sea necesario */
 }
 
 .sidebar-header .admin-name span {
@@ -28,74 +27,66 @@ body {
 .user-icon img {
     width: 50px; /* Ajusta el tamaño del icono */
     height: auto;
-    margin: top 0px; /* Ajusta la distancia con el logo */
     display: block; /* Centra el icono horizontalmente */
-    margin-left:34%;
+    margin-left: 34%;
     margin-right: auto;
     padding: 5px;
 }
 
 .sidebar {
-    flex: 0 0 100px; /* Ancho fijo de la barra lateral */
+    flex: 0 0 250px; /* Ancho fijo de la barra lateral */
     background-color: #5499C7; /* Azul */
     color: #ffffff; /* Texto blanco */
-    padding: 40px;
+    padding: 20px;
 }
 
 .sidebar ul {
     list-style-type: none;
-    padding: 20px 30px; /* Ajusta este valor según sea necesario */
+    padding: 20px 0; /* Ajusta este valor según sea necesario */
     margin-top: 20px; /* Ajusta este valor para subir más la lista */
 }
 .sidebar ul li a {
     color: #ffffff; /* Texto blanco */
     text-decoration: none;
-    /* font-weight:bold ; Texto en negrita */
     margin-bottom: 10px;
+    display: block;
+    padding: 10px;
 }
+.sidebar ul li a:hover {
+    background-color: #3a7aa5; /* Color de fondo al pasar el mouse */
+}
+
 .logout-link {
     position: fixed;
     bottom: 0; /* Fija el enlace en la parte inferior de la ventana del navegador */
     left:  0; /* Fija el enlace en la esquina derecha de la ventana del navegador */
-    padding: 10px 9%; /* Ajusta el espaciado interno según sea necesario */
+    padding: 10px 20px; /* Ajusta el espaciado interno según sea necesario */
     color: #ffffff; /* Color de texto blanco */
     margin-bottom: 20px; /* Ajusta la distancia con los elementos anteriores */
+    background-color: #3a7aa5; /* Color de fondo */
+    text-decoration: none; /* Quita el subrayado del enlace */
+    border-radius: 5px; /* Bordes redondeados */
 }
 
 .content {
-    flex: 1; /* Ocupa todo el espacio restante */
-    padding:20px;
-    margin-top:-10%;
-    background-color: rgba(255, 255, 255, 0.7); /* Fondo transparente */
-    padding: 330px; /* Ajusta el espaciado interno según sea necesario */
-    color:grey;
-     margin-left: 30px;
+    padding: 20px;
+    margin-left: 270px; /* Ancho de la barra lateral más un poco de espacio */
 }
 
-/* Imagen a la derecha como línea de agua */
-.wrapper {
-    display: flex;
-    height: 100vh;
-    background-image: url('images/logo.png'); /* Ruta de la imagen */
-    background-size: 800px; /* Define el tamaño de la imagen */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-position: calc(100% - 40%) calc(100% - 50%); /* Ajusta la posición de la imagen */
-    
-}
-
-.content h3{
-    margin-top: 0%;
+.content h1, .content h2, .content h3 {
+    margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;   
-    font-size: 30px; 
 }
 
-/* Imagen a la derecha como línea de agua */
-.watermark {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-    opacity: 0.3; /* Opacidad baja */
+.content h1 {
+    font-size: 40px; 
 }
 
+.content h2 {
+    font-size: 24px;
+    font-weight: normal;
+}
 
+.content h3 {
+    font-size: 18px;
+}
