--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/principal.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./static/css/principal.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-NwF3tBdYF4JcJjU4pN3nI9an2P+iK8a/1qdzNm5/lf7dUq0HfdvpBfB5SvOzJ4tv" crossorigin="anonymous">  
-    <title>Página con Menú</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Página Inicio</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="logo">
-                    <img src="../static/images/logo.png" alt="Logo">
+                    <img src="/static/images/logo.png" alt="Logo">
                 </div>
                 <br>
                 
@@ -41,16 +41,18 @@
             </ul>
             
            
-        </div>
+        </div> 
         <a href="{{ url_for('logout') }}" class="logout-link">
             <i class="fas fa-sign-out-alt"></i> Cerrar sesión
-        </a>
+        </a>    
         
         <div class="content" bg-primary style="background-image: url('../static/images/fondo.jpg');">
-            <div>
-            <h1>Salsamentaria la <br> mejor</h1>
-            <h3>3123456789</h3>
-            <h2>Nit 45346256652-1</h2>
+            <div class="DatosEmpresa">
+            <h2>¡¡BIENVENIDO!!</h2>
+            <h3>Salsamentaria la mejor</h3>
+            <h4>Nit 45346256652-1</h4>
+            <h4>Tel 3123456789</h4>
+            
         </div>
         </div>
     </div>
