--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/clientes.html
@@ -86,12 +86,11 @@
         <!-- Ventana modal -->
         <div id="myModal" class="modal">
             <div class="modal-content">
-                <span class="close" onclick="closeModal()">×</span>
                 <form action="/guardarClientes" id="clientes_form" method="post" >
                     <div class="modal-header">
-            <h2>Crear  Cliente</h2>
-           
-        </div>
+                        <h2>Crear  Cliente</h2>
+                        <span class="close" onclick="closeModal()">×</span>
+                    </div>
         <div class="modal-body">
                 <div class="caja1">
                     <div class="form-group">
@@ -130,14 +129,10 @@
                         <label for="telefono">Telefono:</label>
                         <input type="text" id="telefono" name="telefono">
                     </div>
-            
                     </div>
-       
             </div>
-            
-            
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-default" onclick="closeModal()">Cancelar</button>
                 <button type="submit" class="btn btn-default">Guardar cambios</button>
             </div>
     </div>
