cambio de codigo a nombre proveedor de R caja

--- a/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
+++ b/aplicativo_pos_hc/aplicativo_pos_hc/templates/caja.html
@@ -59,7 +59,7 @@
                         <thead>
                             <th scope="col">Id_venta</th> 
                             <th scope="col">Id_Factura</th> 
-                            <th scope="col">Codigo</th>
+                            <th scope="col">Nombre_proveedor</th>
                             <th scope="col">Descripcion</th> 
                             <th scope="col">Valor_Unitario</th> 
                             <th scope="col">Medio_Pago</th> 
@@ -78,7 +78,7 @@
                             <tr>
                                 <td>{{d.id_venta}}</td>
                                 <td>{{d.id_factura}}</td>
-                                <td>{{d.codigo}}</td>
+                                <td>{{d.nombre_proveedor}}</td>
                                 <td>{{d.descripcion}}</td>
                                 <td>{{d.valor_unitario}}</td>
                                 <td>{{d.medio_pago}}</td>
@@ -117,8 +117,9 @@
                         <input type="text" id="id_factura" name="id_factura" value="{{ new_code }}" readonly>
                     </div>
                     <div class="form-group">
-                        <label for="codigo">Código:</label>
-                        <input type="text" id="codigo" name="codigo">
+                        <label for="nombre_proveedor">Nombre Proveedor:</label>
+                        <input type="text" id="nombre_proveedor" name="nombre_proveedor">
+
                     </div>
                     <div class="form-group">
                         <label for="descripcion">Descripción:</label>
